Unemployed Update: Quick fix 1
- Fixed mobile issue where total sock chart was squashed
- Fixed speechSynthesis issue where Socko would get stuck if speech was not supported

--- a/public/style.css
+++ b/public/style.css
@@ -1133,6 +1133,10 @@ body {
   #talkoContainer, #totalContainer, #totalWrapper {
     width: 100%;
   }
+  #totalContainer {
+    height: 320px;
+    max-height: 320px;
+  }
   #talkoText {
     height: 300px;
     max-height: 300px;
